wind-turbine: Improve the Notebook file
Improve the Notebook file by:
- Fixing typos and wording.
- Fixing the code cells to adhere to the 69-character limit of PEP-8.

Signed-off-by: Dimitris Poulopoulos <dimitrios.poulopoulos@hpe.com>

--- a/demos/wind-turbine/wind-turbine.ipynb
+++ b/demos/wind-turbine/wind-turbine.ipynb
@@ -21,9 +21,9 @@
     "the world's power needs. However, the inherent unpredictability of power generation poses a challenge when it comes to\n",
     "optimizing this process.\n",
     "\n",
-    "Fortunately, you have a powerful tool at your disposal: Machine Learning. By leveraging advanced algorithms and data\n",
-    "analysis, you can develop models that accurately predict the power production of wind turbines. This enables you to\n",
-    "optimize the power generation process and overcome the challenges associated with its ingrained variability.\n",
+    "Fortunately, you have a powerful tool at your disposal: ML. By leveraging advanced algorithms and data analysis, you can\n",
+    "develop models that accurately predict the power production of wind turbines. This enables you to optimize the power\n",
+    "generation process and overcome the challenges associated with its ingrained variability.\n",
     "\n",
     "## Table of Contents:\n",
     "\n",
@@ -49,8 +49,8 @@
     "\n",
     "First, you need to connect to the Livy endpoint and create a new Spark interactive session. The Spark interactive\n",
     "session is particularly useful for exploratory data analysis, prototyping, and iterative development. It allows you to\n",
-    "interactively work with large datasets, perform transformations, apply analytical operations, and build machine learning\n",
-    "models using Spark's distributed computing capabilities. This is exactly what you do in this Notebook!\n",
+    "interactively work with large datasets, perform transformations, apply analytical operations, and build ML models using\n",
+    "Spark's distributed computing capabilities. This is exactly what you do in this Notebook!\n",
     "\n",
     "To communicate with Livy and manage your sessions you use Sparkmagic, an open-source tool that provides a Jupyter kernel\n",
     "extension. Sparkmagic integrates with Livy, to provide the underlying communication layer between the Jupyter kernel and\n",
@@ -101,7 +101,8 @@
     "details, effortlessly creating and sending requests to the Livy server. Finally, it seamlessly renders the response\n",
     "within the Jupyter user interface, ensuring a smooth and hassle-free experience.\n",
     "\n",
-    "Before you begin, let's make sure that the dataset is copied in the right location:"
+    "Before you begin, let's make sure that the dataset is copied in the right location. The next cell is the only one that\n",
+    "runs locally:"
    ]
   },
   {
@@ -331,7 +332,11 @@
    "source": [
     "%%spark\n",
     "pd.options.display.float_format = '{:.2f}'.format\n",
-    "spark_df.select('wind speed (m/s)', 'theoretical_power_curve (kwh)', 'lv activepower (kw)').toPandas().describe()"
+    "summary = (spark_df.select('wind speed (m/s)', \n",
+    "                           'theoretical_power_curve (kwh)', \n",
+    "                           'lv activepower (kw)')\n",
+    "                   .toPandas()\n",
+    "                   .describe())"
    ]
   },
   {
@@ -360,7 +365,8 @@
     "sample_df = spark_df.sample(withReplacement=False, fraction=0.1, seed=42).toPandas()\n",
     "\n",
     "# Visualizing the distributions with the sample data\n",
-    "columns = ['wind speed (m/s)', 'wind direction (deg)', 'month', 'hour', 'theoretical_power_curve (kwh)', 'lv activepower (kw)']\n",
+    "columns = ['wind speed (m/s)', 'wind direction (deg)', 'month', 'hour',\n",
+    "           'theoretical_power_curve (kwh)', 'lv activepower (kw)']\n",
     "i=1\n",
     "plt.figure(figsize=(10, 12))\n",
     "for each in columns:\n",
@@ -385,7 +391,11 @@
     "plt.clf()\n",
     "\n",
     "# Compute the average power production by month\n",
-    "monthly = spark_df.groupby('month').mean('lv activepower (kw)').sort('avg(lv activepower (kw))').toPandas()\n",
+    "monthly = (spark_df.groupby('month')\n",
+    "                   .mean('lv activepower (kw)')\n",
+    "                   .sort('avg(lv activepower (kw))')\n",
+    "                   .toPandas())\n",
+    "\n",
     "sns.barplot(x='month', y='avg(lv activepower (kw))', data=monthly)\n",
     "plt.title('Months and Average Power Production');\n",
     "\n",
@@ -405,7 +415,11 @@
     "plt.clf()\n",
     "\n",
     "# Compute the average power production by hour\n",
-    "hourly = spark_df.groupby('hour').mean('lv activepower (kw)').sort('avg(lv activepower (kw))').toPandas()\n",
+    "hourly = (spark_df.groupby('hour')\n",
+    "                  .mean('lv activepower (kw)')\n",
+    "                  .sort('avg(lv activepower (kw))')\n",
+    "                  .toPandas())\n",
+    " \n",
     "sns.barplot(x='hour', y='avg(lv activepower (kw))', data=hourly)\n",
     "plt.title('Hours and Average Power Production');\n",
     "\n",
@@ -446,11 +460,17 @@
     "wind_speed = []\n",
     "\n",
     "for i in [0, 5, 10, 15, 20]:\n",
-    "    avg_value = spark_df.filter((spark_df['wind speed (m/s)'] > i) \n",
-    "                                & (spark_df['wind speed (m/s)'] <= i+5))\\\n",
-    "                                .agg({'lv activepower (kw)':'mean'}).collect()[0][0] \n",
+    "    condition = (\n",
+    "        (spark_df['wind speed (m/s)'] > i) &\n",
+    "        (spark_df['wind speed (m/s)'] <= i+5)\n",
+    "    )\n",
+    "    \n",
+    "    avg_value = spark_df.filter(condition)\\\n",
+    "                        .agg({'lv activepower (kw)': 'mean'})\\\n",
+    "                        .collect()[0][0]\n",
+    "\n",
     "    avg_power.append(avg_value)\n",
-    "    wind_speed.append(str(i) + '-' + str(i+5))\n",
+    "    wind_speed.append(f\"{i}-{i+5}\")\n",
     "\n",
     "plt.clf()\n",
     "sns.barplot(x=wind_speed, y=avg_power, color='orange')\n",
@@ -512,8 +532,10 @@
     "# Plot the real power production over the theoritical\n",
     "plt.clf()\n",
     "plt.figure(figsize=(10,6))\n",
-    "sns.scatterplot(x='wind speed (m/s)', y='lv activepower (kw)', color='orange', label='Real Production', alpha=0.5, data=sample_df)\n",
-    "sns.lineplot(x='wind speed (m/s)', y='theoretical_power_curve (kwh)', color='blue', label='Theoritical Production', data=sample_df)\n",
+    "sns.scatterplot(x='wind speed (m/s)', y='lv activepower (kw)', color='orange',\n",
+    "                label='Real Production', alpha=0.5, data=sample_df)\n",
+    "sns.lineplot(x='wind speed (m/s)', y='theoretical_power_curve (kwh)',\n",
+    "             color='blue', label='Theoritical Production', data=sample_df)\n",
     "plt.title('Wind Speed and Power Production Chart')\n",
     "plt.ylabel('Power Production (kw)');\n",
     "\n",
@@ -530,11 +552,17 @@
    "outputs": [],
    "source": [
     "%%spark\n",
-    "# Filter the big data where the real and theoritical power productions are equal to 0\n",
-    "zero_theo_power = spark_df.filter((spark_df['lv activepower (kw)'] == 0)\n",
-    "                                  & (spark_df['theoretical_power_curve (kwh)'] == 0)).toPandas()\n",
+    "# Filter the big data where the real and theoritical power productions\n",
+    "# are equal to 0\n",
+    "zero_theo_power = spark_df.filter(\n",
+    "    (spark_df['lv activepower (kw)'] == 0) &\n",
+    "    (spark_df['theoretical_power_curve (kwh)'] == 0)\n",
+    ").toPandas()\n",
     "\n",
-    "print(zero_theo_power[['wind speed (m/s)', 'theoretical_power_curve (kwh)', 'lv activepower (kw)']].sample(5))"
+    "print(zero_theo_power[\n",
+    "    ['wind speed (m/s)', 'theoretical_power_curve (kwh)', \n",
+    "     'lv activepower (kw)']\n",
+    "].sample(5))"
    ]
   },
   {
@@ -573,7 +601,8 @@
     "                            & (spark_df['theoretical_power_curve (kwh)'] != 0)\n",
     "                            & (spark_df['wind speed (m/s)'] > 3)).toPandas()\n",
     "print(zero_power.head())\n",
-    "print('No of Observations (while Wind Speed > 3 m/s and Power Production = 0): ', len(zero_power))"
+    "print('No of Observations (while Wind Speed > 3 m/s and'\n",
+    "      ' Power Production = 0): ', len(zero_power))"
    ]
   },
   {
@@ -609,7 +638,8 @@
     "# The number of the examples that show a 0 power production\n",
     "# while theoritically there should be power production\n",
     "print(\"The number of the examples that show a 0 power production\"\n",
-    "      \" while theoritically there should be power production:\", zero_power['month'].count())"
+    "      \" while theoretically there should be power production:\",\n",
+    "      zero_power['month'].count())"
    ]
   },
   {
@@ -639,7 +669,8 @@
    "outputs": [],
    "source": [
     "%%spark\n",
-    "columns = ['wind speed (m/s)', 'wind direction (deg)', 'theoretical_power_curve (kwh)', 'lv activepower (kw)']\n",
+    "columns = ['wind speed (m/s)', 'wind direction (deg)',\n",
+    "           'theoretical_power_curve (kwh)', 'lv activepower (kw)']\n",
     "i=1\n",
     "plt.clf()\n",
     "plt.figure(figsize=(20, 5))\n",
@@ -692,9 +723,13 @@
     "%%spark\n",
     "\n",
     "# Fancy indexing for outliers\n",
-    "outlier_tf = (wind_speed['wind speed (m/s)'] < lower) | (wind_speed['wind speed (m/s)'] > upper)\n",
+    "outlier_tf = (\n",
+    "    (wind_speed['wind speed (m/s)'] < lower)\n",
+    "    | (wind_speed['wind speed (m/s)'] > upper)\n",
+    ")\n",
     "\n",
-    "print('Total Number of Outliers: ', len(wind_speed['wind speed (m/s)'][outlier_tf]))\n",
+    "print('Total Number of Outliers: ',\n",
+    "      len(wind_speed['wind speed (m/s)'][outlier_tf]))\n",
     "print('--'*15)\n",
     "print('Some Examples of Outliers:')\n",
     "print(wind_speed['wind speed (m/s)'][outlier_tf].sample(10))"
@@ -743,11 +778,15 @@
    "source": [
     "%%spark\n",
     "# High level power production\n",
-    "spark_df.filter(((spark_df['month'] == 3) | (spark_df['month'] == 8) | (spark_df['month'] == 11)) \n",
-    "                & ((spark_df['hour'] >= 16) | (spark_df['hour'] <= 24)) \n",
-    "                & ((spark_df['wind direction (deg)'] > 0) | (spark_df['wind direction (deg)'] < 90))\n",
-    "                & ((spark_df['wind direction (deg)'] > 180) | (spark_df['wind direction (deg)'] < 225))\n",
-    "               ).agg({'lv activepower (kw)':'mean'}).show()"
+    "spark_df.filter(\n",
+    "    ((spark_df['month'] == 3) | (spark_df['month'] == 8) \n",
+    "     | (spark_df['month'] == 11))\n",
+    "    & ((spark_df['hour'] >= 16) | (spark_df['hour'] <= 24))\n",
+    "    & ((spark_df['wind direction (deg)'] > 0) \n",
+    "       | (spark_df['wind direction (deg)'] < 90))\n",
+    "    & ((spark_df['wind direction (deg)'] > 180) \n",
+    "       | (spark_df['wind direction (deg)'] < 225))\n",
+    ").agg({'lv activepower (kw)': 'mean'}).show()"
    ]
   },
   {
@@ -761,10 +800,12 @@
    "source": [
     "%%spark\n",
     "# Low level power production\n",
-    "spark_df.filter((spark_df['month'] == 7) \n",
-    "                & ((spark_df['hour'] >= 9) | (spark_df['hour'] <= 11)) \n",
-    "                & ((spark_df['wind direction (deg)'] > 90) | (spark_df['wind direction (deg)'] < 160))\n",
-    "               ).agg({'lv activepower (kw)':'mean'}).show()"
+    "spark_df.filter(\n",
+    "    (spark_df['month'] == 7) \n",
+    "    & ((spark_df['hour'] >= 9) | (spark_df['hour'] <= 11))\n",
+    "    & ((spark_df['wind direction (deg)'] > 90) \n",
+    "       | (spark_df['wind direction (deg)'] < 160))\n",
+    ").agg({'lv activepower (kw)': 'mean'}).show()"
    ]
   },
   {
@@ -795,9 +836,11 @@
     "# Converting lv activepower (kw) variable as label\n",
     "spark_df = spark_df.withColumn('label', spark_df['lv activepower (kw)'])\n",
     "\n",
-    "# Preparing the independent variables (Features) and fefining the variables to be used\n",
+    "# Preparing the independent variables (Features)\n",
+    "# and fefining the variables to be used\n",
     "variables = ['month', 'hour', 'wind speed (m/s)', 'wind direction (deg)']\n",
-    "vectorAssembler = VectorAssembler(inputCols = variables, outputCol = 'features')\n",
+    "vectorAssembler = VectorAssembler(\n",
+    "    inputCols = variables, outputCol = 'features')\n",
     "va_df = vectorAssembler.transform(spark_df)\n",
     "\n",
     "# Combining features and label column\n",
@@ -859,7 +902,8 @@
    "outputs": [],
    "source": [
     "%%spark\n",
-    "gbm_model.write().overwrite().save(\"file:///mounts/shared-volume/shared/auto-spark/GBM.model\")"
+    "gbm_model.write().overwrite().save(\n",
+    "    \"file:///mounts/shared-volume/shared/auto-spark/GBM.model\")"
    ]
   },
   {
@@ -872,7 +916,8 @@
    "outputs": [],
    "source": [
     "%%spark\n",
-    "gbm_model_dtap = GBTRegressionModel.load(\"file:///mounts/shared-volume/shared/auto-spark/GBM.model\")"
+    "gbm_model_dtap = GBTRegressionModel.load(\n",
+    "    \"file:///mounts/shared-volume/shared/auto-spark/GBM.model\")"
    ]
   },
   {
@@ -911,7 +956,8 @@
     "\n",
     "# Defining the variables to be used\n",
     "variables = ['month', 'hour', 'wind speed (m/s)', 'wind direction (deg)']\n",
-    "vectorAssembler = VectorAssembler(inputCols = variables, outputCol = 'features')\n",
+    "vectorAssembler = VectorAssembler(\n",
+    "    inputCols = variables, outputCol = 'features')\n",
     "vec_df = vectorAssembler.transform(eva_df)\n",
     "\n",
     "# Combining features and label column\n",
@@ -922,18 +968,22 @@
     "preds_df = preds.select('label','prediction').toPandas()\n",
     "\n",
     "# Compining dataframes to compare\n",
-    "frames = [sample_df[['wind speed (m/s)', 'theoretical_power_curve (kwh)']], preds_df]\n",
+    "frames = [sample_df[['wind speed (m/s)', 'theoretical_power_curve (kwh)']],\n",
+    "          preds_df]\n",
     "sample_data = pd.concat(frames, axis=1)\n",
     "\n",
     "plt.clf()\n",
     "# Visualizing real, theoritical and predicted power production\n",
     "plt.figure(figsize=(10, 7))\n",
-    "sns.scatterplot(x='wind speed (m/s)', y='label',alpha=0.5, label= 'Real Power', data=sample_data)\n",
-    "sns.scatterplot(x='wind speed (m/s)', y='prediction', alpha=0.7, label='Predicted Power', marker='o', data=sample_data)\n",
-    "sns.lineplot(x='wind speed (m/s)', y='theoretical_power_curve (kwh)', label='Theoritical Power',color='purple', data=sample_data)\n",
+    "sns.scatterplot(x='wind speed (m/s)', y='label',alpha=0.5,\n",
+    "                label='Real Power', data=sample_data)\n",
+    "sns.scatterplot(x='wind speed (m/s)', y='prediction', alpha=0.7,\n",
+    "                label='Predicted Power', marker='o', data=sample_data)\n",
+    "sns.lineplot(x='wind speed (m/s)', y='theoretical_power_curve (kwh)',\n",
+    "             label='Theoritical Power', color='purple', data=sample_data)\n",
     "plt.title('Wind Turbine Power Production Prediction')\n",
     "plt.ylabel('Power Production (kw)')\n",
-    "plt.legend();\n",
+    "plt.legend()\n",
     "\n",
     "%matplot plt"
    ]
