feast: Improve the Notebook file
Improve the Notebook file by:
- Fixing typos and wording.
- Change code cells and Python code to adhere to the 69-character limit
  of PEP-8.
- Use `dataset` as the data derectory. We use this name to standardise
  the directory that houses the datasets.

Signed-off-by: Dimitris Poulopoulos <dimitrios.poulopoulos@hpe.com>

--- a/tutorials/feast/ride-sharing.ipynb
+++ b/tutorials/feast/ride-sharing.ipynb
@@ -39,9 +39,7 @@
     "- [Fetch Online Features for Real-time Inference](#fetch-online-features-for-real-time-inference)\n",
     "- [Fetch Online Features Using a Feature Service](#fetch-online-features-using-a-feature-service)\n",
     "- [Ingest Streaming Features](#ingest-streaming-features)\n",
-    "- [Train the Model](#train-the-model)\n",
-    "\n",
-    "To get started, let's import the libraries you need and explore the Feast feature repository."
+    "- [Train the Model](#train-the-model)"
    ]
   },
   {
@@ -155,27 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.read_parquet(\"data/driver_stats.parquet\").head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a641c0a3-f6a1-4c4d-8c51-95113e61743e",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "Following, the next steps in this tutorial you go through a comprehensive and typical Feast workflow. Here are the\n",
-    "primary steps:\n",
-    "\n",
-    "1. [Register feature definitions](#register-feature-definitions)\n",
-    "1. [Generate a Training Dataset](#generate-training-data)\n",
-    "1. [Generate Features for Batch Scoring](#generate-features-for-batch-scoring)\n",
-    "1. [Ingest Batch Features into an Online Store](#ingest-batch-features-into-an-online-store)\n",
-    "1. [Fetch Online Features for Real-time Inference](#fetch-online-features-for-real-time-inference)\n",
-    "1. [Fetch Online Features Using a Feature Service](#fetch-online-features-using-a-feature-service)\n",
-    "1. [Ingest Streaming Features](#ingest-streaming-features)\n",
-    "1. [Train the Model](#train-the-model)"
+    "pd.read_parquet(\"dataset/driver_stats.parquet\").head()"
    ]
   },
   {
@@ -205,8 +183,9 @@
    "source": [
     "fs = FeatureStore(repo_path=feature_repo_path)\n",
     "\n",
-    "fs.apply([driver, driver_stats_source, driver_stats_feature_view, driver_stats_push_source,\n",
-    "          driver_activity, transformed_stats, driver_stats_fresh_feature_view])"
+    "fs.apply([driver, driver_stats_source, driver_stats_feature_view,\n",
+    "          driver_stats_push_source, driver_activity, transformed_stats,\n",
+    "          driver_stats_fresh_feature_view])"
    ]
   },
   {
