mlflow: Improve the Notebooks
Improve the Notebooks by:
- Adding table of contents.
- Fixing typos and wording.

Signed-off-by: Dimitris Poulopoulos <dimitrios.poulopoulos@hpe.com>

--- a/tutorials/mlflow/02.bike-sharing-prediction.ipynb
+++ b/tutorials/mlflow/02.bike-sharing-prediction.ipynb
@@ -8,7 +8,9 @@
    "source": [
     "# Prediction\n",
     "\n",
-    "Deployment of kserve will take few minutes to comes to ready state. In just a short span of time, it will transition into a ready state and you'll be in a state where you can invoke the service you deployed."
+    "Deployment of kserve will take few minutes to comes to ready state. In just a short span of time, it will transition\n",
+    "into a ready state and you'll be in a state where you can invoke the service you deployed. You can check the status of\n",
+    "your deployment by navigating to the Kubeflow Endopoints UI."
    ]
   },
   {
