--- a/Data-Science/MLflow/bike-sharing-prediction.ipynb
+++ b/Data-Science/MLflow/bike-sharing-prediction.ipynb
@@ -17,6 +17,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create object store s3 secret manually \n",
+    "# update kserve/kserve-objectstore-s3-secret.yaml with values\n",
+    "# !kubectl apply -f kserve/kserve-objectstore-s3-secret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import yaml\n",
     "import json\n",
     "\n",
