Update Kubeflow-GPU examples

--- a/Data-Science/Kubeflow-GPU/Train_and_infer_mnist.ipynb
+++ b/Data-Science/Kubeflow-GPU/Train_and_infer_mnist.ipynb
@@ -3,36 +3,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62e691b7-29f2-42dd-93b7-e2821debf743",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Installing mlflow package with specific version\n",
-    "!pip install --proxy http://hpeproxy.its.hpecorp.net:80 mlflow==2.4.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "333df75d-4b08-4b45-ab89-6f85138e085e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Restart kernel after installing correct mlflow version\n",
-    "from importlib.metadata import version\n",
-    "if version('mlflow') != \"2.4.0\":\n",
-    "    raise Exception(\"Restart the kernel and try again\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "5342505d-4a76-404a-9011-7b6af316c6d3",
-   "metadata": {
-    "tags": [
-     "imports"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -54,11 +26,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ffe8a279-4e33-4f65-86aa-d50114df871f",
-   "metadata": {
-    "tags": [
-     "pipeline-parameters"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "TRAIN_EPOCHS = 10 # Number of epochs to train\n",
@@ -69,11 +37,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b3c6c972-a2a4-4ade-8374-e76fc7f03431",
-   "metadata": {
-    "tags": [
-     "functions"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def mnist_datasets():\n",
@@ -87,9 +51,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "794d7272-d629-4a1f-8e17-941be1b5ca37",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def create_model():\n",
@@ -106,9 +68,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9d4aa20c-f992-4d04-8d88-aef8529730fa",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def compile_model(model):\n",
@@ -121,9 +81,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "eea5e48c-c1ce-42d5-bc02-d106ea9f6abe",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def train_model(model, x_train, x_test, y_test, y_train):\n",
@@ -145,11 +103,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2b238b1f-8ec6-4bf5-a53b-3d51cb3429db",
-   "metadata": {
-    "tags": [
-     "block:load_data"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load dataset\n",
@@ -160,12 +114,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a95b44d5-0f72-4da3-a01d-45fa057e5916",
-   "metadata": {
-    "tags": [
-     "block:create_model",
-     "prev:load_data"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create the model\n",
@@ -176,13 +125,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "53c5a324-7b2c-4660-89da-b6406c750c7b",
-   "metadata": {
-    "tags": [
-     "block:train_model_gpu1",
-     "prev:create_model",
-     "limit:nvidia.com/gpu:1"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Train and evaluate for a set number of epochs.\n",
@@ -222,12 +165,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cc5c20bd-f07a-4581-bfe8-fd5637a77a5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set current JWT token as access and secret key for local minio\n",
+    "!sed -e \"s/\\$AUTH_TOKEN/$AUTH_TOKEN/\" /mnt/shared/ezua-tutorials/Data-Science/Kubeflow-GPU/object_store_sa_secret.yaml.tpl > /tmp/object_store_sa_secret.yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1dde54e3-ed30-448e-a1d8-e6238c9ab722",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create service account and secret in order to allow kserve access object store\n",
-    "!kubectl apply -f /mnt/shared/ezua-tutorials/Data-Science/Kubeflow-GPU/object_store_sa_secret.yaml"
+    "!kubectl apply -f /tmp/object_store_sa_secret.yaml"
    ]
   },
   {
