--- a/Data-Science/Kubeflow-GPU/Train_mnist_kfp_gpu.ipynb
+++ b/Data-Science/Kubeflow-GPU/Train_mnist_kfp_gpu.ipynb
@@ -95,8 +95,6 @@
    "outputs": [],
    "source": [
     "def train_model(model, x_train, x_test, y_test, y_train):\n",
-    "    print(\"Num GPUs Available: \", len(tf.config.experimental.list_physical_devices('GPU')))\n",
-    "    print()\n",
     "    # model fitting\n",
     "    start = time.time()\n",
     "    history = model.fit(\n",
@@ -148,14 +146,12 @@
    "id": "a95b44d5-0f72-4da3-a01d-45fa057e5916",
    "metadata": {
     "tags": [
-     "block:create_model",
+     "block:create_output_dirs",
      "prev:load_data"
     ]
    },
    "outputs": [],
    "source": [
-    "# Create the model\n",
-    "model_mnist = create_model()\n",
     "# create dir for Kale\n",
     "if tf.io.gfile.exists('/marshal'):\n",
     "    tf.io.gfile.mkdir('/marshal/model_mnist.tfkeras')"
@@ -168,15 +164,18 @@
    "metadata": {
     "tags": [
      "block:train_model_cpu",
-     "prev:create_model"
+     "prev:create_output_dirs"
     ]
    },
    "outputs": [],
    "source": [
     "# Train and evaluate for a set number of epochs.\n",
     "with tf.device('/CPU:0'):\n",
-    "    compile_model(model_mnist)\n",
-    "    history_cpu, cpu_duration = train_model(model_mnist, x_train, x_test, y_test, y_train)\n",
+    "    # Create the model\n",
+    "    model_mnist_cpu = create_model()\n",
+    "    # Compile and train\n",
+    "    compile_model(model_mnist_cpu)\n",
+    "    history_cpu, cpu_duration = train_model(model_mnist_cpu, x_train, x_test, y_test, y_train)\n",
     "    cpu_acc = history_cpu.history['accuracy'][-1]\n",
     "    print(f\"Accuracy: {cpu_acc * 100}%\")"
    ]
@@ -188,7 +187,7 @@
    "metadata": {
     "tags": [
      "block:train_model_gpu1",
-     "prev:create_model",
+     "prev:create_output_dirs",
      "limit:nvidia.com/gpu:1"
     ]
    },
@@ -196,8 +195,13 @@
    "source": [
     "# Train and evaluate for a set number of epochs.\n",
     "with tf.device('/GPU:0'):\n",
-    "    compile_model(model_mnist)\n",
-    "    history_gpu, gpu_duration = train_model(model_mnist, x_train, x_test, y_test, y_train)\n",
+    "    print(\"Num GPUs Available: \", len(tf.config.list_physical_devices('GPU')))\n",
+    "    print()\n",
+    "    # Create the model\n",
+    "    model_mnist_gpu = create_model()\n",
+    "    # Compile and train\n",
+    "    compile_model(model_mnist_gpu)\n",
+    "    history_gpu, gpu_duration = train_model(model_mnist_gpu, x_train, x_test, y_test, y_train)\n",
     "    gpu_acc = history_gpu.history['accuracy'][-1]\n",
     "    print(f\"Accuracy: {gpu_acc * 100}%\")"
    ]
@@ -216,8 +220,10 @@
    "outputs": [],
    "source": [
     "# Save model\n",
-    "export_path = os.path.join(model_dir, 'export')\n",
-    "tf.saved_model.save(model_mnist, export_path)"
+    "export_path_cpu = os.path.join(model_dir, 'cpu', 'export')\n",
+    "export_path_gpu = os.path.join(model_dir, 'gpu', 'export')\n",
+    "tf.saved_model.save(model_mnist_cpu, export_path_cpu)\n",
+    "tf.saved_model.save(model_mnist_gpu, export_path_gpu)"
    ]
   },
   {
@@ -313,7 +319,6 @@
    "snapshot_volumes": false,
    "steps_defaults": [
     "label:access-ml-pipeline:true",
-    "label:add-external-df-volume:true",
     "label:add-ldapcert-secret:true",
     "label:add-sssd-secret:true",
     "label:add-user-s3-secret:true"
