updated mnist example to fix issue with sec context

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -163,7 +163,7 @@
     "                            \"containers\": [\n",
     "                                {\n",
     "                                    \"name\": \"tensorflow\",\n",
-    "                                    \"image\": \"docker.io/liuhougangxa/tf-estimator-mnist\",\n",
+    "                                    \"image\": \"gcr.io/mapr-252711/kubeflow/kfexamples/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
     "                                    \"command\": [\n",
     "                                        \"python\",\n",
     "                                        \"/opt/model.py\",\n",
@@ -178,6 +178,11 @@
     "                                            \"name\": \"data-volume\"\n",
     "                                        }\n",
     "                                    ]\n",
+    "                                }\n",
+    "                            ],\n",
+    "                            \"imagePullSecrets\": [\n",
+    "                                {\n",
+    "                                    \"name\": \"hpe-imagepull-secrets\"\n",
     "                                }\n",
     "                            ],\n",
     "                            \"volumes\": [\n",
@@ -204,7 +209,7 @@
     "                            \"containers\": [\n",
     "                                {\n",
     "                                    \"name\": \"tensorflow\",\n",
-    "                                    \"image\": \"docker.io/liuhougangxa/tf-estimator-mnist\",\n",
+    "                                    \"image\": \"gcr.io/mapr-252711/kubeflow/kfexamples/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
     "                                    \"command\": [\n",
     "                                        \"python\",\n",
     "                                        \"/opt/model.py\",\n",
@@ -219,6 +224,11 @@
     "                                            \"name\": \"data-volume\"\n",
     "                                        }\n",
     "                                    ]\n",
+    "                                }\n",
+    "                            ],\n",
+    "                            \"imagePullSecrets\": [\n",
+    "                                {\n",
+    "                                    \"name\": \"hpe-imagepull-secrets\"\n",
     "                                }\n",
     "                            ],\n",
     "                            \"volumes\": [\n",
@@ -325,7 +335,7 @@
     "                \"containers\": [\n",
     "                    {\n",
     "                        \"name\": \"tensorflow\",\n",
-    "                        \"image\": \"docker.io/liuhougangxa/tf-estimator-mnist\",\n",
+    "                        \"image\": \"gcr.io/mapr-252711/kubeflow/kfexamples/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
     "                        \"command\": [\n",
     "                            \"sh\",\n",
     "                            \"-c\"\n",
@@ -343,6 +353,11 @@
     "                                \"name\": \"data-volume\"\n",
     "                            }\n",
     "                        ]\n",
+    "                    }\n",
+    "                ],\n",
+    "                \"imagePullSecrets\": [\n",
+    "                    {\n",
+    "                        \"name\": \"hpe-imagepull-secrets\"\n",
     "                    }\n",
     "                ],\n",
     "                \"volumes\": [\n",
@@ -376,7 +391,7 @@
     "                \"containers\": [\n",
     "                    {\n",
     "                        \"name\": \"tensorflow\",\n",
-    "                        \"image\": \"docker.io/liuhougangxa/tf-estimator-mnist\",\n",
+    "                        \"image\": \"gcr.io/mapr-252711/kubeflow/kfexamples/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
     "                        \"command\": [\n",
     "                            \"sh\",\n",
     "                            \"-c\",\n",
@@ -390,6 +405,11 @@
     "                                \"name\": \"data-volume\"\n",
     "                            }\n",
     "                        ],\n",
+    "                    }\n",
+    "                ],\n",
+    "                \"imagePullSecrets\": [\n",
+    "                    {\n",
+    "                        \"name\": \"hpe-imagepull-secrets\"\n",
     "                    }\n",
     "                ],\n",
     "                \"volumes\": [\n",
