correct mismatched variable assignment

--- a/Data-Science/MLflow/bike-sharing-mlflow.ipynb
+++ b/Data-Science/MLflow/bike-sharing-mlflow.ipynb
@@ -38,8 +38,8 @@
    "source": [
     "import os\n",
     "\n",
-    "os.environ[\"AWS_ACCESS_KEY_ID\"] = \"s3\"\n",
-    "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = os.environ['MLFLOW_TRACKING_TOKEN']\n",
+    "os.environ[\"AWS_ACCESS_KEY_ID\"] = os.environ['MLFLOW_TRACKING_TOKEN']\n",
+    "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = \"s3\"\n",
     "os.environ[\"AWS_ENDPOINT_URL\"] = 'http://local-s3-service.ezdata-system.svc.cluster.local:30000'\n",
     "os.environ[\"MLFLOW_S3_ENDPOINT_URL\"] = os.environ[\"AWS_ENDPOINT_URL\"]\n",
     "os.environ[\"MLFLOW_S3_IGNORE_TLS\"] = \"true\"\n",
