Ezaf 3474 MlFlow Example Update (#81)
* update mlflow example to set env vars

* correct mismatched variable assignment

* Update s3-endpoint in kserve object store s3 secret

* automate object store secret part

* remove extra data from secret

---------

Co-authored-by: Ashok Manda <ashokmanda@Ashoks-MacBook-Pro.local>

--- a/Data-Science/MLflow/bike-sharing-prediction.ipynb
+++ b/Data-Science/MLflow/bike-sharing-prediction.ipynb
@@ -17,17 +17,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create object store s3 secret manually \n",
-    "# update kserve/kserve-objectstore-s3-secret.yaml with values\n",
-    "# !kubectl apply -f kserve/kserve-objectstore-s3-secret"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import yaml\n",
     "import json\n",
     "\n",
@@ -38,7 +27,31 @@
     "        print(\"Deployment successful!\")\n",
     "    except subprocess.CalledProcessError as e:\n",
     "        print(f\"Deployment failed. Error: {e}\")\n",
-    "        \n",
+    "\n",
+    "\n",
+    "## update kserve-objectstore-s3 secret\n",
+    "with open('kserve/kserve-objectstore-s3-secret.yaml', 'r') as file:\n",
+    "    s3_yaml_data = yaml.safe_load(file)\n",
+    "\n",
+    "# Convert YAML to JSON\n",
+    "s3_json_data = json.dumps(s3_yaml_data)\n",
+    "s3_data = json.loads(s3_json_data)\n",
+    "\n",
+    "s3_data[\"stringData\"][\"AWS_ACCESS_KEY_ID\"] = os.environ['AUTH_TOKEN']\n",
+    "s3_data[\"stringData\"][\"AWS_SECRET_ACCESS_KEY\"] = \"s3\"\n",
+    "\n",
+    "s3_data[\"metadata\"][\"annotations\"][\"serving.kserve.io/s3-endpoint\"] = os.environ['MLFLOW_S3_ENDPOINT_URL'].replace(\"http://\",\"\")\n",
+    "s3_data[\"metadata\"][\"namespace\"] = os.environ['USER']\n",
+    "\n",
+    "# Save the JSON data to a file\n",
+    "with open('kserve/kserve-objectstore-s3-secret.json', 'w') as file:\n",
+    "    file.write(json.dumps(s3_data))\n",
+    "\n",
+    "# Specify the path to your JSON file\n",
+    "json_file_path = 'kserve/kserve-objectstore-s3-secret.json'\n",
+    "\n",
+    "# Call the function to deploy the Kubernetes resource to kserve service account\n",
+    "deploy_kserve_model(json_file_path)\n",
     "\n",
     "## update kserve-minio-secret\n",
     "with open('kserve/kserve-minio-secret.yaml', 'r') as file:\n",
