--- a/Data-Science/MLflow/bike-sharing-mlflow.ipynb
+++ b/Data-Science/MLflow/bike-sharing-mlflow.ipynb
@@ -24,6 +24,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Configure s3 and MLFlow Details"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -31,10 +38,12 @@
    "source": [
     "import os\n",
     "\n",
-    "# Configure s3 details\n",
-    "os.environ[\"AWS_ACCESS_KEY_ID\"] = \"s3\"\n",
-    "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = os.environ['MLFLOW_TRACKING_TOKEN']\n",
-    "os.environ[\"MLFLOW_S3_ENDPOINT_URL\"] = 'http://local-s3-service.ezdata-system.svc.cluster.local:30000'"
+    "os.environ[\"AWS_ACCESS_KEY_ID\"] = os.environ['MLFLOW_TRACKING_TOKEN']\n",
+    "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = \"s3\"\n",
+    "os.environ[\"AWS_ENDPOINT_URL\"] = 'http://local-s3-service.ezdata-system.svc.cluster.local:30000'\n",
+    "os.environ[\"MLFLOW_S3_ENDPOINT_URL\"] = os.environ[\"AWS_ENDPOINT_URL\"]\n",
+    "os.environ[\"MLFLOW_S3_IGNORE_TLS\"] = \"true\"\n",
+    "os.environ[\"MLFLOW_TRACKING_INSECURE_TLS\"] = \"true\""
    ]
   },
   {
