updated example with precondition to create secret in user namespace

--- a/Data-Science/Kubeflow/Financial-Time-Series/financial_time_series_example.ipynb
+++ b/Data-Science/Kubeflow/Financial-Time-Series/financial_time_series_example.ipynb
@@ -71,6 +71,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "######################################### E2E Demo example precondition ##############################################\n",
+    "\n",
+    "# You need to generate secret to have ability read datasource files from S3 bucket by Spark application (Airflow DAG)\n",
+    "# Copy template \"object_store_secret.yaml.tpl\" from shared/ezua-tutorials/Data-Analytics/Spark directory to e.g. user folder\n",
+    "\n",
+    "import kfp\n",
+    "\n",
+    "!sed -e \"s/\\$AUTH_TOKEN/$AUTH_TOKEN/\" /mnt/user/object_store_secret.yaml.tpl > /tmp/object_store_secret.yaml\n",
+    "!kubectl apply -f /tmp/object_store_secret.yaml -n {kfp.Client().get_user_namespace()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Install required package (Arrow Python bindings).\n",
     "# After the package is installed, restart the notebook kernel (computational engine).\n",
     "import sys\n",
