--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -12,6 +12,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e944a50e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "######################################### E2E Demo example precondition ##############################################\n",
+    "\n",
+    "# You need to generate secret to have ability read datasource files from S3 bucket by Spark application (Airflow DAG)\n",
+    "# Copy template \"object_store_secret.yaml.tpl\" from shared/ezua-tutorials/Data-Analytics/Spark directory to e.g. user folder\n",
+    "\n",
+    "import kfp\n",
+    "\n",
+    "kfp_client = kfp.Client()\n",
+    "namespace = kfp_client.get_user_namespace()\n",
+    "\n",
+    "!sed -e \"s/\\$AUTH_TOKEN/$AUTH_TOKEN/\" /mnt/user/object_store_secret.yaml.tpl > /tmp/object_store_secret.yaml\n",
+    "!kubectl apply -f /tmp/object_store_secret.yaml -n {namespace}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "89bb0c90-a09f-4197-b9a2-f7558efb31de",
    "metadata": {},
    "outputs": [],
@@ -32,7 +53,6 @@
    "outputs": [],
    "source": [
     "import uuid\n",
-    "import kfp\n",
     "import kfp.dsl as dsl\n",
     "from kfp import components\n",
     "from kubeflow.katib import ApiClient\n",
@@ -64,11 +84,7 @@
     "print(f\"Katib experiment name: {name}\")\n",
     "\n",
     "# Number of epoch to train the model\n",
-    "training_steps=\"100\"\n",
-    "\n",
-    "\n",
-    "kfp_client = kfp.Client()\n",
-    "namespace = kfp_client.get_user_namespace()"
+    "training_steps=\"100\""
    ]
   },
   {
