updated example with precondition to create secret in user namespace

--- a/Data-Science/Kubeflow/Financial-Time-Series/financial_time_series_example.ipynb
+++ b/Data-Science/Kubeflow/Financial-Time-Series/financial_time_series_example.ipynb
@@ -78,8 +78,11 @@
     "\n",
     "import kfp\n",
     "\n",
+    "kfp_client = kfp.Client()\n",
+    "namespace = kfp_client.get_user_namespace()\n",
+    "\n",
     "!sed -e \"s/\\$AUTH_TOKEN/$AUTH_TOKEN/\" /mnt/user/object_store_secret.yaml.tpl > /tmp/object_store_secret.yaml\n",
-    "!kubectl apply -f /tmp/object_store_secret.yaml -n {kfp.Client().get_user_namespace()}"
+    "!kubectl apply -f /tmp/object_store_secret.yaml -n {namespace}"
    ]
   },
   {
