updated example with precondition to create secret in user namespace

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -179,7 +179,7 @@
     "                            \"containers\": [\n",
     "                                {\n",
     "                                    \"name\": \"tensorflow\",\n",
-    "                                    \"image\": \"gcr.io/mapr-252711/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
+    "                                    \"image\": \"gcr.io/mapr-252711/kubeflow/kfexamples/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
     "                                    \"command\": [\n",
     "                                        \"python\",\n",
     "                                        \"/opt/model.py\",\n",
@@ -225,7 +225,7 @@
     "                            \"containers\": [\n",
     "                                {\n",
     "                                    \"name\": \"tensorflow\",\n",
-    "                                    \"image\": \"gcr.io/mapr-252711/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
+    "                                    \"image\": \"gcr.io/mapr-252711/kubeflow/kfexamples/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
     "                                    \"command\": [\n",
     "                                        \"python\",\n",
     "                                        \"/opt/model.py\",\n",
@@ -351,7 +351,7 @@
     "                \"containers\": [\n",
     "                    {\n",
     "                        \"name\": \"tensorflow\",\n",
-    "                        \"image\": \"gcr.io/mapr-252711/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
+    "                        \"image\": \"gcr.io/mapr-252711/kubeflow/kfexamples/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
     "                        \"command\": [\n",
     "                            \"sh\",\n",
     "                            \"-c\"\n",
@@ -407,7 +407,7 @@
     "                \"containers\": [\n",
     "                    {\n",
     "                        \"name\": \"tensorflow\",\n",
-    "                        \"image\": \"gcr.io/mapr-252711/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
+    "                        \"image\": \"gcr.io/mapr-252711/kubeflow/kfexamples/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
     "                        \"command\": [\n",
     "                            \"sh\",\n",
     "                            \"-c\",\n",
